--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Skoda Puzzle App" />
+    <meta name="title" property="og:title" content="Skoda Puzzle" />
+    <meta property="og:type" content="Website" />
+    <meta name="image"
+          property="og:image" 
+          content="https://live.staticflickr.com/65535/51304919480_206816bd46.jpg" />
+    <meta name="description"
+          property="og:description"
+          content="Malayalam Skoda Puzzle " />
+    <meta name="author" content="Jude Vinod" />
     <title>Skoda Puzzle</title>
     <link href="css/style.css" rel="stylesheet" />
     <link href="//db.onlinewebfonts.com/c/007f636c4af6a332a98f32cc3cee8cb4?family=Eurostile+Extended+#2" rel="stylesheet" type="text/css"/>
