--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="Website" />
     <meta name="image"
           property="og:image" 
-          content="https://live.staticflickr.com/65535/51304919480_206816bd46.jpg" />
+          content="https://skoda-brand.s3.amazonaws.com/2019/w15/brand-elements-brand-mark-landscape-brand-mark-proportions.jpg?v=1555513537" />
     <meta name="description"
           property="og:description"
           content="Malayalam Skoda Puzzle " />
